Mon Jun 10 15:34:26 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* eval_error.c (error_print): reduce calling setjmp.

Mon Jun 10 12:10:06 2013  Tanaka Akira  <akr@fsij.org>

	* bignum.c (integer_unpack_num_bdigits_small: Extracted from
	  rb_integer_unpack.
	  (integer_unpack_num_bdigits_generic): Ditto.
	  (integer_unpack_num_bdigits_bytes): New function.
	  (rb_integer_unpack): Use above functions.
	  Return a Bignum for INTEGER_PACK_FORCE_BIGNUM evenwhen the result
	  is zero.

Mon Jun 10 05:38:23 2013  Tanaka Akira  <akr@fsij.org>

	* bignum.c (absint_numwords_small): New function.
	  (absint_numwords_generic): Use absint_numwords_small if possible.

Mon Jun 10 01:07:57 2013  Tanaka Akira  <akr@fsij.org>

	* bignum.c (absint_numwords_bytes): New function.
	  (absint_numwords_generic): Extracted from rb_absint_numwords.
	  (rb_absint_numwords): Use absint_numwords_bytes if possible.

Sun Jun  9 21:33:15 2013  Tanaka Akira  <akr@fsij.org>

	* bignum.c (rb_absint_numwords): Return (size_t)-1 when overflow.
	  Refine variable names.
	  (rb_absint_size): Refine variable names.

	* internal.h (rb_absint_size): Refine an argument name.
	  (rb_absint_numwords): Ditto.

Sun Jun  9 16:51:41 2013  Tanaka Akira  <akr@fsij.org>

	* bignum.c (rb_absint_numwords): Renamed from rb_absint_size_in_word.

	* internal.h (rb_absint_numwords): Follow the above change.

	* pack.c (pack_pack): Ditto.

	* random.c (rand_init): Ditto.
	  (limited_big_rand): Ditto.

Sun Jun  9 14:41:05 2013  Tanaka Akira  <akr@fsij.org>

	* bignum.c (rb_integer_pack): numwords_allocated argument removed.

	* internal.h (rb_integer_pack): Follow the above change.

	* hash.c (rb_hash): Ditto.

	* time.c (v2w_bignum): Ditto.

	* pack.c (pack_pack): Ditto.

	* random.c (int_pair_to_real_inclusive): Ditto.
	  (rand_init): Ditto.
	  (random_load): Ditto.
	  (limited_big_rand): Ditto.

Sun Jun  9 09:34:44 2013  Tanaka Akira  <akr@fsij.org>

	* bignum.c (big2str_base_powerof2): New function.