@@ -1,4 +1,8 @@
-Mon Jun 10 15:34:26 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>
+Mon Jun 10 15:35:34 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>
+
+	* eval_error.c (error_print): restore errinfo for the case new
+	  excecption raised while printing the message.  [ruby-core:55365]
+	  [Bug #8501]
 
 	* eval_error.c (error_print): reduce calling setjmp.
 
